[tool.poetry]
name = "gloo-edge-demos"
version = "0.1.0"
description = ""
authors = ["Kamesh Sampath <kamesh.sampath@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^4.9.0"
autopep8 = "^1.6.0"
jmespath = "^0.10.0"
kubernetes = "^19.15.0"
jsonpatch = "^1.32"
pexpect = "^4.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
